--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Lim-Plugin-DNS
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.11    2013-08-07
+        - Release 0.11
 
+0.10    2013-08-02
+        - Release 0.10
